--- a/package.json
+++ b/package.json
@@ -1,33 +1,31 @@
 {
-  "name": "serve-node",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app/app.js",
+  "name": "mean-api",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
-    "dev": "nodemon index"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "2.0.20"
+    "dev": "ts-node ./api/lib/index.ts",
+    "build": "tsc",
+    "watch": "nodemon"
+
   },
   "dependencies": {
-    "babel-core": "6.26.3",
-    "babel-preset-es2015": "6.24.1",
-    "babel-register": "6.26.0",
-    "body-parser": "1.20.2",
-    "bluebird": "3.7.2",
-    "cors": "2.8.5",
+    "body-parser": "1.20.1",
     "express": "4.18.2",
-    "lodash": "4.17.21",
-    "moment": "2.29.4",
-    "mongodb": "5.2.0",
-    "mongoose": "7.0.3",
-    "mongoose-unique-validator": "4.0.0",
+    "ejs": "3.1.8",
+    "graphql-request": "5.0.0",
+    "graphql": "16.6.0",
+    "mongoose": "8.2.1",
     "morgan": "1.10.0",
-    "jsonwebtoken": "9.0.0",
-    "sha1": "1.1.1"
+    "joi": "17.12.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/node": "^14.18.33",
+    "@types/morgan": "1.9.3",
+    "node-gyp": "^6.1.0",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "4.9.3"
   }
-}
+ }
+ 
